# swft

./: .gitignore  CMakeLists.txt  README.org
include/: config.h.in
src/: main.cpp
